styles/Home.module.scss
$first-anim-dur: 5s;
$second-anim-dur: 2s;
$third-anim-delay: 7s;

.root {
  background-color: var(--background);
  height: 100vh;
  overflow: hidden;
}

.heroSection {
  position: relative;
  padding-top: 40vh;
  padding-bottom: 40vh;
}

.heroLogo {
  position: absolute;
  top: 20vh;
  left: 50%;
  transform: translateX(-50%);
  animation: insert-hero-logo $first-anim-dur linear forwards;
}

.heroContent {
  position: relative;
  z-index: 1;
}

.mainTitle {
  font-size: 5rem;
  text-transform: uppercase;
  text-align: center;
  color: var(--white);
  margin-bottom: 10vh;
  animation: explode-main-title $second-anim-dur $first-anim-dur ease-out
    forwards;
}

.subHeader {
  text-transform: uppercase;
  color: var(--white);
  text-align: center;
  margin-bottom: 0.8rem;
  animation: explode-hero-subTitle $second-anim-dur $first-anim-dur ease-out
    forwards;
}

.iconsContainer {
  display: flex;
  justify-content: space-between;
  font-size: 2rem;
  width: 200px;
  margin: auto;
}

.iconReact {
  color: #61dbfb;
  animation: explode-react-icon $second-anim-dur $first-anim-dur ease-out
      forwards,
    dance-react-icon 8s $third-anim-delay linear infinite;
}

.iconJS {
  color: #f0db4f;
  animation: explode-js-icon $second-anim-dur $first-anim-dur ease-out forwards,
    dance-js-icon 2s $third-anim-delay ease infinite;
}

.iconCode {
  color: var(--white);
  animation: explode-code-icon $second-anim-dur $first-anim-dur ease-out
      forwards,
    dance-code-icon 3s $third-anim-delay ease infinite;
}

.iconPy {
  color: #306998;
  animation: explode-py-icon $second-anim-dur $first-anim-dur ease-out forwards,
    dance-py-icon 4s $third-anim-delay ease infinite;
}

@media screen and (max-width: 500px) {
  .heroLogo {
    animation: insert-hero-logo-mobile 0.3s linear forwards;
  }
  .heroSection {
    padding-top: 20vh;
  }
  .mainTitle {
    font-size: 3rem;
  }
}

@keyframes get-in-touch {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@keyframes insert-hero-logo {
  0% {
    top: -100vh;
  }
  100% {
    top: 30vh;
  }
}

@keyframes explode-main-title {
  0% {
    transform: translate(0, 0) rotate(0deg);
  }
  90% {
    transform: translate(-300px, -400px) rotate(-200deg);
  }
  100% {
    transform: translate(0, 0) rotate(0deg);
  }
}
@keyframes explode-hero-subTitle {
  0% {
    transform: translate(0, 0) rotate(0deg);
  }
  90% {
    transform: translate(5px, 80px) rotate(5deg);
  }
  100% {
    transform: translate(0, 0) rotate(0deg);
  }
}

@keyframes explode-react-icon {
  0% {
    transform: translate(0, 0) rotate(0deg) scale(1);
  }
  90% {
    transform: translate(-500px, 200px) scale(10);
  }
  100% {
    transform: translate(0, 0) rotate(0deg) scale(1);
  }
}

@keyframes explode-js-icon {
  0% {
    transform: translate(0, 0) rotate(0deg) scale(1) rotate(0);
  }
  90% {
    transform: translate(-80px, 300px) scale(0.4) rotate(300deg);
  }
  100% {
    transform: translate(0, 0) rotate(0deg) scale(1) rotate(0);
  }
}

@keyframes explode-code-icon {
  0% {
    transform: translate(0, 0) rotate(0deg) scale(1);
  }
  90% {
    transform: translate(30px, -400px) scale(10);
  }
  100% {
    transform: translate(0, 0) rotate(0deg) scale(1);
  }
}

@keyframes explode-py-icon {
  0% {
    transform: translate(0, 0) rotate(0deg) scale(1);
  }
  90% {
    transform: translate(500px, 400px) scale(20);
  }
  100% {
    transform: translate(0, 0) rotate(0deg) scale(1);
  }
}

@keyframes dance-react-icon {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

@keyframes dance-js-icon {
  0% {
    transform: rotate(-10deg);
  }
  50% {
    transform: rotate(10deg);
  }
  100% {
    transform: rotate(-10deg);
  }
}

@keyframes dance-code-icon {
  0% {
    transform: rotate(0deg);
  }
  3% {
    transform: rotate(5deg);
  }
  6% {
    transform: rotate(-5deg);
  }
  9% {
    transform: rotate(8deg);
  }
  12% {
    transform: rotate(-8deg);
  }
  15% {
    transform: rotate(10deg);
  }
  18% {
    transform: rotate(-10deg);
  }
  21% {
    transform: rotate(8deg);
  }
  23% {
    transform: rotate(-8deg);
  }
  25% {
    transform: rotate(5deg);
  }
  28% {
    transform: rotate(-5deg);
  }
  31% {
    transform: rotate(3deg);
  }
  35% {
    transform: rotate(0deg);
  }
}

@keyframes dance-py-icon {
  0% {
    color: #306998;
  }
  50% {
    color: #ffd43b;
  }
  100% {
    color: #306998;
  }
}

